[gd_scene load_steps=11 format=3 uid="uid://dq6kxu6q3tj2e"]

[ext_resource type="Script" path="res://scripts/inventory.gd" id="1_18vl6"]
[ext_resource type="StyleBox" uid="uid://vrm03npv3gd7" path="res://assets/res/inventory_highlight.tres" id="1_e42yi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3ek6"]
bg_color = Color(0.14902, 0.156863, 0.176471, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.192157, 0.2, 0.227451, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yn1us"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mdxky"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1d8h5"]
bg_color = Color(1, 0.309804, 0.309804, 0.313726)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.454902, 0.454902, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Animation" id="Animation_po1a5"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemGraphicContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1940, 440)]
}

[sub_resource type="Animation" id="Animation_j84gx"]
resource_name = "in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemGraphicContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1940, 440), Vector2(1690, 440)]
}

[sub_resource type="Animation" id="Animation_u80oo"]
resource_name = "out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemGraphicContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1690, 440), Vector2(1940, 440)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lp7jx"]
_data = {
"RESET": SubResource("Animation_po1a5"),
"in": SubResource("Animation_j84gx"),
"out": SubResource("Animation_u80oo")
}

[node name="Inventory" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_18vl6")

[node name="ItemGraphicContainer" type="Panel" parent="."]
layout_mode = 0
offset_left = 1940.0
offset_top = 440.0
offset_right = 2140.0
offset_bottom = 640.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i3ek6")

[node name="Action" type="Button" parent="ItemGraphicContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
offset_left = 2.47955e-05
offset_right = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_yn1us")
theme_override_styles/hover = ExtResource("1_e42yi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mdxky")
theme_override_styles/focus = ExtResource("1_e42yi")

[node name="ItemGraphic" type="TextureRect" parent="ItemGraphicContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 2
stretch_mode = 5

[node name="UsableOverlay" type="Panel" parent="ItemGraphicContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1d8h5")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lp7jx")
}

[connection signal="pressed" from="ItemGraphicContainer/Action" to="." method="_on_action_pressed"]
